<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00050505"
    tools:context=".Activity_C">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="223dp"
        android:layout_height="244dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/imageDescriptionText"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kofi_owusu1" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nova_round"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="0dp"
        android:text="@string/kofi_owusu"
        android:textAlignment="center"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/profile_pic"
        app:layout_constraintStart_toStartOf="@+id/profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic" />

    <View
        android:id="@+id/profile_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#EE090808"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <TextView
        android:id="@+id/text_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/nova_round"
        android:text="@string/track"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_view" />

    <TextView
        android:id="@+id/text_android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/nova_round"
        android:text="@string/android"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/text_track"
        app:layout_constraintTop_toBottomOf="@+id/profile_view" />

    <TextView
        android:id="@+id/text_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/nova_round"
        android:text="@string/country"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_track" />

    <TextView
        android:id="@+id/text_ghana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/nova_round"
        android:text="@string/ghana"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/text_country"
        app:layout_constraintTop_toBottomOf="@+id/text_android" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/nova_round"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_country" />

    <TextView
        android:id="@+id/text_keow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/nova_round"
        android:text="@string/keowusu1_gmail_com"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/text_email"
        app:layout_constraintTop_toBottomOf="@+id/text_ghana" />

    <TextView
        android:id="@+id/text_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/nova_round"
        android:text="@string/phone_number"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email" />

    <TextView
        android:id="@+id/text_024"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/nova_round"
        android:text="@string/number"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/text_phone"
        app:layout_constraintTop_toBottomOf="@+id/text_keow" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/nova_round"
        android:text="@string/slack_username"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_phone" />

    <TextView
        android:id="@+id/text_slackname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/nova_round"
        android:text="@string/kofiowusu"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/text_username"
        app:layout_constraintTop_toBottomOf="@+id/text_024" />

</androidx.constraintlayout.widget.ConstraintLayout>